Fixed RSVP, maps, and spacing problems

--- a/src/main/resources/static/css/wedding_mobile.css
+++ b/src/main/resources/static/css/wedding_mobile.css
@@ -17,7 +17,7 @@ body {
 	color: var(--bluedark);
 	background-color: var(--pinklight);
 	display: none;
-	margin-top: 70px;
+	//margin-top: 30px;
 }
 
 .l, .r {
@@ -77,9 +77,9 @@ h1, .menuitem {
 }
 
 h1 {
-	font-size: 50px;
+	font-size: 30px;
 	text-weight: normal;
-	display: none;
+	visibility: hidden;
 }
 
 h2 {
@@ -104,27 +104,22 @@ p {
 
 /*maps				NOT WORKING*/
 .mapouter {
-	border-style: none;
+	border-style: solid;
 	margin-left: auto;
 	margin-right: auto;
+	//position: absolute;
 	text-align: center;
-	display: none;
 }
 
 .gmap_canvas{
 	padding: 0px;
 	margin: 0px;
-	display: none;
 }
 
 iframe {
-	 width: 0%;
-	 height: 0%;
-	 display: none;
+	 width: 100%;
+	 height: 100%;
 }
-.maps {display:none;}
-
-
 
 /*menu*/
 .m-bar .menuitem {
@@ -154,7 +149,7 @@ iframe {
     float: right;
     display: inline;
 	position: fixed;
-	right: 0;
+	right: 10px;
     top: 0;
 }
 .m-bar.responsive a.icon {
@@ -187,15 +182,17 @@ iframe {
 /*rsvp table and form*/
 
 #rsvptable{
-	color: var(--bluedark);
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	width: 95%
+	display: none;
 }
+
+#mobileRSVP {
+	text-align:center;
+}
+
 
 form {
 	text-align: center;
+	font-size: 30px;
 }
 
 input[type="submit"] {
@@ -203,19 +200,22 @@ input[type="submit"] {
 	color: var(--goldlight);
 	border-style: none;
 	font-family: var(--serif);
-	font-size: 20px;
 	margin: 5px;
 	padding: 5px;
+	display: inline;
+	width: 50%;
+	font-size: 25px;
 }
 
-input[type="text"], input[type="checkbox"] {
+input[type="text"] {
 	background-color: var(--goldlight);
 	color: var(--bluedark);
 	border-style: none;
 	font-family: var(--serif);
-	font-size: 15px;
 	margin: 5px;
 	padding: 5px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 select {
@@ -223,17 +223,27 @@ select {
 	color: var(--bluedark);
 	border-style: none;
 	font-family: var(--serif);
-	font-size: 15px;
 	margin: 5px;
 	padding: 5px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .rsvpelement {
-	width: 100px;
+	width: 75%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 25px;
 }
 
 #right {
 	text-align:right;
+	font-weight: bold;
+}
+
+#mobileRSVP p {
+	font-size: 25px;
 	font-weight: bold;
 }
 
